SLING-12648: sync with master